# triton-tutorial

./: README.md  pyproject.toml
src/: main.py
src/triton_tutorial/: __init__.py  layer_normalization.py  vector_addition.py
src/utility/: stop_watch.py
